# django-to

./: README.rst  db.sqlite3  pyproject.toml
project/: settings.py  urls.py
to/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
to/migrations/: 0001_initial.py
to/templates/: add.html  base.html  index.html  list.html
to/templates/to/: base.html
