[tool.poetry]
name = "to"
version = "0.1.0"
description = ""
authors = ["sapporojones <sapporojones@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.1"
django = "^3.1.5"
pre-commit = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
